force-app/main/default/objects/sked_Event_Type_Setting__c/sked_Event_Type_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Skedulo Event Type Setting</label>
</CustomObject>