force-app/main/default/objects/sked_Event_Type_Setting__c/fields/sked_Available_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Available_Start__c</fullName>
    <defaultValue>800</defaultValue>
    <label>Available Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>