force-app/main/default/objects/sked_Event_Type_Setting__c/fields/sked_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>sked_Background_Color__c</fullName>
    <defaultValue>&#39;#0ea7cc&#39;</defaultValue>
    <label>Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>