force-app/main/default/objects/sked_Event_Type_Setting__c/fields/sked_Can_Be_Pre_dated__c.field-meta.xml
<CustomField>
    <fullName>sked_Can_Be_Pre_dated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Pre-dated</label>
    <type>Checkbox</type>
</CustomField>