force-app/main/default/objects/sked_Event_Type_Setting__c/fields/sked_Item__c.field-meta.xml
<CustomField>
    <fullName>sked_Item__c</fullName>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>