force-app/main/default/objects/sked_Event_Type_Setting__c/fields/sked_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Short_Name__c</fullName>
    <label>Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>